@@ -33,6 +33,10 @@ INSP.INTN.remove.section.family=Remove section
 #SmkCondaSectionNotAllowedWithRun
 INSP.NAME.conda.section.not.allowed.with.run=Conda environments are not allowed with run directive.
 
+#SmkEnvmodulesNotAllowedSectionInspection
+INSP.NAME.envmodules.section.not.allowed.with.title=envmodules directive is not allowed with run
+INSP.NAME.envmodules.section.not.allowed.with.run.message=The directive 'envmodules' is only allowed with 'shell', 'script', 'notebook', or 'wrapper' directives (not with run).
+
 # SmkSectionMultilineStringArgsInspection.kt
 INSP.NAME.section.multiline.string.args=Multiline section string argument
 INSP.NAME.section.multiline.string.args.message=Multiline string argument in ''{0}'' will be considered as concatenation. Maybe comma is missing.
