@@ -1,0 +1,6 @@
+<html>
+<body>
+<p>envmodules directive is only allowed with shell, script, notebook, or wrapper directives (not with run),
+</p>
+</body>
+</html>
